[workspace]
resolver = "2"
members = [
    "miden-lib",
    "miden-tx",
    "mock",
    "objects",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xPolygonMiden/miden-base"
exclude = [".github/"]

[profile.release]
codegen-units = 1
lto = true

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
codegen-units = 1
lto = true

[workspace.dependencies]
assembly = { package = "miden-assembly", path = "../demox-miden-vm/assembly", default-features = false }
miden-crypto = { version = "0.9", default-features = false }
miden-prover = { path = "../demox-miden-vm/prover", default-features = false }
miden-stdlib = { path = "../demox-miden-vm/stdlib", default-features = false }
miden-verifier = { path = "../demox-miden-vm/verifier", default-features = false }
vm-core = { package = "miden-core", path = "../demox-miden-vm/core", default-features = false }
vm-processor = { package = "miden-processor", path = "../demox-miden-vm/processor", default-features = false }
web-sys = { version = "0.3", features = ["console"] }