[package]
name = "miden-bench-tx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[[bin]]
name = "bench-tx"
path = "src/main.rs"

[features]
async = ["maybe-async-await/async"]

[dependencies]
maybe-async-await = { git = "https://github.com/phklive/maybe-async-await.git" }
miden-lib = { path = "../miden-lib", version = "0.3" }
miden-objects = { path = "../objects", version = "0.3" }
miden-tx = { path = "../miden-tx", version = "0.3" }
mock = { package = "miden-mock", path = "../mock"  }
rand = { workspace = true }
serde = { package = "serde", version = "1.0" }
serde_json = { package = "serde_json", version = "1.0", features = [
    "preserve_order",
] }
tokio = { version = "1", features = ["full"] }
vm-processor = { workspace = true }
